--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>85123A</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white hanging heart t-light holder</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>15.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>71053</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white metal lantern</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84406B</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>cream cupid hearts coat hanger</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>22.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029G</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>knitted union flag hot water bottle</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029E</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>red woolly hottie white heart.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  InvoiceNo StockCode  year  month  day  hour  \\\n",
+       "0           0     536365    85123A  2010     12    3     8   \n",
+       "1           1     536365     71053  2010     12    3     8   \n",
+       "2           2     536365    84406B  2010     12    3     8   \n",
+       "3           3     536365    84029G  2010     12    3     8   \n",
+       "4           4     536365    84029E  2010     12    3     8   \n",
+       "\n",
+       "                           Description  Quantity          InvoiceDate  \\\n",
+       "0   white hanging heart t-light holder         6  2010-12-01 08:26:00   \n",
+       "1                  white metal lantern         6  2010-12-01 08:26:00   \n",
+       "2       cream cupid hearts coat hanger         8  2010-12-01 08:26:00   \n",
+       "3  knitted union flag hot water bottle         6  2010-12-01 08:26:00   \n",
+       "4       red woolly hottie white heart.         6  2010-12-01 08:26:00   \n",
+       "\n",
+       "   UnitPrice  CustomerID         Country  amount_spent  \n",
+       "0       2.55       17850  United Kingdom         15.30  \n",
+       "1       3.39       17850  United Kingdom         20.34  \n",
+       "2       2.75       17850  United Kingdom         22.00  \n",
+       "3       3.39       17850  United Kingdom         20.34  \n",
+       "4       3.39       17850  United Kingdom         20.34  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "orders = pd.read_csv('Orders.csv')\n",
+    "orders.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(397924, 14)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders.shape"
    ]
   },
   {
@@ -81,11 +257,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of VIP Customers: 217\n",
+      "Number of Preferred Customers: 868\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# Step 1: Aggregate expenses of each customer\n",
+    "customer_expenses = orders.groupby('CustomerID')['amount_spent'].sum()\n",
+    "\n",
+    "# Step 2: Calculate percentiles\n",
+    "percentiles = customer_expenses.quantile([0.75, 0.95, 1.0])\n",
+    "\n",
+    "# Step 3: Classify customers\n",
+    "vip_customers = customer_expenses[customer_expenses > percentiles[0.95]]\n",
+    "preferred_customers = customer_expenses[\n",
+    "    (customer_expenses <= percentiles[0.95]) & \n",
+    "    (customer_expenses > percentiles[0.75])]\n",
+    "\n",
+    "# Display the number of VIP and Preferred Customers\n",
+    "print(\"Number of VIP Customers:\", vip_customers.shape[0])\n",
+    "print(\"Number of Preferred Customers:\", preferred_customers.shape[0])"
    ]
   },
   {
@@ -99,11 +298,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The country with the most VIP customers is United Kingdom with 84185 VIP customers.\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "vip_customers_info = pd.merge(orders, vip_customers, left_on='CustomerID', right_index=True)\n",
+    "\n",
+    "vip_customers_by_country = vip_customers_info.groupby('Country').size()\n",
+    "\n",
+    "country_with_most_vip_customers = vip_customers_by_country.idxmax()\n",
+    "num_vip_customers = vip_customers_by_country.max()\n",
+    "\n",
+    "print(f\"The country with the most VIP customers is {country_with_most_vip_customers} with {num_vip_customers} VIP customers.\")"
    ]
   },
   {
@@ -115,17 +329,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_labels</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12346</th>\n",
+       "      <td>VIP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12347</th>\n",
+       "      <td>Preferred</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12348</th>\n",
+       "      <td>Preferred</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12349</th>\n",
+       "      <td>Preferred</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12350</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18280</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18281</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18282</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18283</th>\n",
+       "      <td>Preferred</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18287</th>\n",
+       "      <td>Preferred</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4339 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           customer_labels\n",
+       "CustomerID                \n",
+       "12346                  VIP\n",
+       "12347            Preferred\n",
+       "12348            Preferred\n",
+       "12349            Preferred\n",
+       "12350                  NaN\n",
+       "...                    ...\n",
+       "18280                  NaN\n",
+       "18281                  NaN\n",
+       "18282                  NaN\n",
+       "18283            Preferred\n",
+       "18287            Preferred\n",
+       "\n",
+       "[4339 rows x 1 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# your code here"
+    "customer_labels_df = pd.DataFrame(customer_labels, columns=['customer_labels'])\n",
+    "display(customer_labels_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The country with the most VIP+Preferred customers combined is United Kingdom with 221635 VIP+Preferred customers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "vip_preferred_customers_info = pd.merge(orders, customer_labels_df, left_on='CustomerID', right_index=True)\n",
+    "\n",
+    "vip_preferred_customers_info = vip_preferred_customers_info[vip_preferred_customers_info['customer_labels'].isin(['VIP', 'Preferred'])]\n",
+    "\n",
+    "vip_preferred_customers_by_country = vip_preferred_customers_info.groupby('Country').size()\n",
+    "\n",
+    "country_with_most_vip_preferred_customers = vip_preferred_customers_by_country.idxmax()\n",
+    "num_vip_preferred_customers = vip_preferred_customers_by_country.max()\n",
+    "\n",
+    "print(f\"The country with the most VIP+Preferred customers combined is {country_with_most_vip_preferred_customers} with {num_vip_preferred_customers} VIP+Preferred customers.\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -139,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
